--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,44 @@
     <title>Document</title>
 </head>
 <body>
-    <p>siemanejro</p>
+    <header>
+        <div class="app-icone"></div>
+        <div class="search-bar"></div>
+        <div class="change-units"></div>
+    </header>
+    <div class="content">
+        <div class="city-name"></div>
+        <div class="current">
+            <div class="box-1">
+                <div class="date-today"></div>
+                <div class="temp-today">
+                    <div class="icon-current"></div>
+                    <div class="temp-current"></div>
+                </div>
+                <div class="minmax-today">
+                    <div class="min-today"></div>
+                    <div class="max-today"></div>
+                </div>
+            </div>
+            <div class="box-2">
+                <div class="feelslike-head"></div>
+                <div class="temp-feelslike"></div>
+                <div class="description"></div>
+            </div>
+            <div class="box-3">
+                <div class="wind-head"></div>
+                <div class="wind-speed"></div>
+                <div class="wind-gusts"></div>
+            </div>
+        </div>
+        <div class="extra-info">
+            <div class="sunrise"></div>
+            <div class="sunset"></div>
+            <div class="humidity"></div>
+            <div class="chance-of-rain"></div>
+        </div>
+        <div class="hours"></div>
+        <div class="next-days"></div>
+    </div>
 </body>
 </html>
