fetching suggestions for searching localization form geonames.org after typing 5 characters into searchbox

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,15 @@
 <body>
     <header>
         <div class="app-icone"></div>
-        <div class="search-bar"></div>
+        <div class="search-bar">
+            <input id='my-city' "text" placeholder="enter your city name">
+            <ul id="suggestions" style="list-style: none; padding: 0;">
+                <li>siema</li>
+                <li>siema</li>
+                <li>siema</li>
+            </ul>
+            <button class="src-btn">search</button>
+        </div>
         <div class="change-units"></div>
     </header>
     <div class="content">
