displaying name suggestion under searchbox

--- a/src/template.html
+++ b/src/template.html
@@ -10,11 +10,7 @@
         <div class="app-icone"></div>
         <div class="search-bar">
             <input id='my-city' "text" placeholder="enter your city name">
-            <ul id="suggestions" style="list-style: none; padding: 0;">
-                <li>siema</li>
-                <li>siema</li>
-                <li>siema</li>
-            </ul>
+            <ul id="suggestions" style="list-style: none; padding: 0;"></ul>
             <button class="src-btn">search</button>
         </div>
         <div class="change-units"></div>
