add eventlistner to suggestions on list to fetch weather data

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
     <header>
         <div class="app-icone"></div>
         <div class="search-bar">
-            <input id='my-city' "text" placeholder="enter your city name">
+            <input id='my-city' "text" placeholder="enter your city name" autocomplete="off">
             <ul id="suggestions" style="list-style: none; padding: 0;"></ul>
             <button class="src-btn">search</button>
         </div>
