add utilis formatDate

--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,8 @@
     <header>
         <div class="app-icone"></div>
         <div class="search-bar">
-            <input id='my-city' "text" placeholder="enter your city name" autocomplete="off">
+            <input id='my-city' type="text" placeholder="enter your city name" autocomplete="off">
             <ul id="suggestions" style="list-style: none; padding: 0;"></ul>
-            <button class="src-btn">search</button>
         </div>
         <div class="change-units"></div>
     </header>
