refactor: optimize requiredData object -add hours and winddir

--- a/src/template.html
+++ b/src/template.html
@@ -18,14 +18,19 @@
         <div class="city-name"></div>
         <div class="current">
             <div class="box-1">
-                <div class="date-today"></div>
-                <div class="temp-today">
-                    <div class="icon-current"></div>
-                    <div class="temp-current"></div>
+                <div class="temp-info">
+                    <div class="date-today"></div>
+                    <div class="temp-today">
+                        <div class="icon-current"></div>
+                        <div class="temp-current"></div>
+                    </div>
+                    <div class="minmax-today">
+                        <div class="min-today"></div>
+                        <div class="max-today"></div>
+                    </div>
                 </div>
-                <div class="minmax-today">
-                    <div class="min-today"></div>
-                    <div class="max-today"></div>
+                <div class="hours">
+
                 </div>
             </div>
             <div class="box-2">
@@ -45,7 +50,7 @@
             <div class="humidity"></div>
             <div class="chance-of-rain"></div>
         </div>
-        <div class="hours"></div>
+        <!-- <div class="hours"></div> -->
         <div class="next-days"></div>
     </div>
 </body>
