feat: show arrow with wind direction in wind box

--- a/src/template.html
+++ b/src/template.html
@@ -42,6 +42,10 @@
                 <div class="wind-head"></div>
                 <div class="wind-speed"></div>
                 <div class="wind-gusts"></div>
+                <div class="wind-direction-container">
+                    <div id="wind-arrow">↑</div>
+                    <div id="wind-dir-text"></div>
+                </div>
             </div>
         </div>
         <div class="extra-info">
