fix: wind arrow (html)  now points from where wind blows

--- a/src/template.html
+++ b/src/template.html
@@ -43,7 +43,7 @@
                 <div class="wind-speed"></div>
                 <div class="wind-gusts"></div>
                 <div class="wind-direction-container">
-                    <div id="wind-arrow">↑</div>
+                    <div id="wind-arrow">↓</div>
                     <div id="wind-dir-text"></div>
                 </div>
             </div>
