feat: footer with link to my github

--- a/src/template.html
+++ b/src/template.html
@@ -91,5 +91,13 @@
         </div>
     </div>
 </div>
+<footer class="app-footer">
+	<p>
+		<a href="https://github.com/DariuszWasik" target="_blank" rel="noopener" class="github-link">
+			<img src="./assets/icons/github.svg" alt="GitHub" class="github-icon-glass" />
+			<span>View on GitHub</span>
+		</a>
+	</p>
+</footer>
 </body>
 </html>
