feat: add pressure and uv index info

--- a/src/template.html
+++ b/src/template.html
@@ -60,6 +60,8 @@
             <div class="sunset"></div>
             <div class="humidity"></div>
             <div class="chance-of-rain"></div>
+            <div class="pressure"></div>
+            <div class="uv-index"></div>
         </div>
         <!-- <div class="hours"></div> -->
         <div class="next-days"></div>
